# psxe

./: .gitmodules  CMakeLists.txt  README.md
include/frontend/: config.h  screen.h
include/psx/: bus.h  bus_init.h  cpu.h  exe.h  psx.h
include/psx/dev/: bios.h  dma.h  exp1.h  exp2.h  gpu.h  ic.h  input.h  mc1.h  mc2.h  mc3.h  mcd.h  mdec.h  pad.h  ram.h  scratchpad.h  spu.h  timer.h  xa.c
include/psx/dev/cdrom/: cdrom.h  cue.h
include/psx/input/: guncon.h  sda.h
source/: main.c
source/frontend/: argparse.c  config.c  screen.c  toml.c
source/psx/: bus.c  cpu.c  exe.c  log.c  psx.c
source/psx/dev/: bios.c  dma.c  exp1.c  exp2.c  gpu.c  ic.c  input.c  mc1.c  mc2.c  mc3.c  mcd.c  mdec.c  pad.c  ram.c  scratchpad.c  spu.c  timer.c
source/psx/dev/cdrom/: audio.c  cdrom.c  cue.c  disc.c  impl.c  list.c  queue.c
source/psx/input/: guncon.c  sda.c
